--- a/index.html
+++ b/index.html
@@ -3,11 +3,54 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dreamland</title>
+    <title>DREAMLAND PROJECT</title>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Barlow:wght@300;400;500;600&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@4.9.0/fonts/remixicon.css" rel="stylesheet"/>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <canvas id="bg-canvas"></canvas>
 
+    <div class="page1">
+        <nav>
+            <a href="">
+                <div id="logo">
+                    <h1>🏴󠁧󠁢󠁳󠁣󠁴󠁿 DREAMLAND</h1>
+                </div>
+            </a>
+            <div class="navigation">
+                <a href="">HOME</a>
+                <a href="">TIMELINE</a>
+                <a href="">LEGENDS</a>
+                <a href="">MATCHES</a>
+                <a href="">STORIES</a>
+            </div>
+        </nav>
+
+        <div class="main">
+            <div class="center"></div>
+            <h3>Interactive Documentary</h3>
+            <h1>SCOTLAND'S WORLD CUP JOURNEY</h1>
+            <p>Explore 70 years of hope, heartbreak, and unwavering loyalty through an immersive interactive experience.</p>
+            <div class="btn">
+                <button>BEGIN JOURNEY</button>
+            </div>
+            <div class="imagebox">
+                <img style="--left: 0rem" src="https://i2-prod.dailyrecord.co.uk/article36755329.ece/ALTERNATES/s1200f/0_Genoa-CFC-v-SSC-Napoli-Serie-A.jpg" alt="">
+                <img style="--left: 2rem" src="https://i.guim.co.uk/img/media/1e60508d44424980814e13315084873b8ffa9df0/0_0_5014_3008/master/5014.jpg?width=1200&height=1200&quality=85&auto=format&fit=crop&s=eff85fce148880a7a70b202d677d6e91" alt="">
+                <img style="--left: 4rem" src="https://e0.365dm.com/24/11/2048x1152/skysports-ben-doak-scotland_6749546.jpg?20241116092004" alt="">
+                <img style="--left: 6rem" src="https://i.guim.co.uk/img/media/d46bd94904afe9d8be526538b6907bb90bf93872/0_113_3000_1800/master/3000.jpg?width=1200&height=1200&quality=85&auto=format&fit=crop&s=f06f54faa89ab8c7ddb62b44ec370f1a" alt="">
+                <img style="--left: 8rem" src="https://www.scottishfa.co.uk/media/13745/che-adams-2026.jpg?mode=max&width=180&format=webp" alt="">
+            </div>
+            <p>An interactive documentary celebrating Scotland's World Cup journey. Built with passion by fans, for fans.</p>
+        </div>
+
+        <div class="right">
+            <img id="card" src="https://c.files.bbci.co.uk/af3e/live/44d70eb0-c522-11f0-ba4c-a176bf1fb76f.jpg" alt="">
+        </div>
+    </div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
