--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     </div>
                 </div>
                 <div class="footer-bottom">
-                    <p>© 2026 Dreamland Project • Built with Three.js, GSAP &amp; 💙</p>
+                    <p>© 2026 Dreamland Project • Built with Three.js, GSAP & More</p>
                 </div>
             </footer>
         </div>
